// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonCircle Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz kChugU"
/>
`;

exports[`SkeletonCircle Snapshots with className 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz kChugU className"
/>
`;

exports[`SkeletonCircle Snapshots with height 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz bhRYFn className"
  height={100}
/>
`;

exports[`SkeletonCircle Snapshots with width 1`] = `
<div
  className="sc-bdfBwQ hLTJHd sc-gsTCUz foQrQU className"
  width={100}
/>
`;
